2015-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expiry-target-group): Supply the info structure to
	`gnus-request-group'.

2015-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts): Make cid file names relative if and
	only if html doesn't specify <base> directory.

2015-02-11  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-treat-buttonize): Don't re-buttonize URLs in HTML
	parts, because that breaks filling (since buttons are in a bold face).

2015-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-convert-shr-links): Delete useless variable `face';
	use gnus-overlays-at and gnus-overlay-put.

2015-02-10  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Only pass the fill column when not using
	fonts, because limiting the width to what's appropriate for followups
	doesn't really help when not using proportional fonts.

2015-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-convert-shr-links): Don't overwrite the faces from
	shr, beacause that breaks folding.
	(mm-shr): Don't shorten the width when using fonts.

2015-02-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-start.el (gnus-save-newsrc-file-check-timestamp): Remove
	variable; always check the newrc timestamp.
	(gnus-save-newsrc-file): Always check timestamp.

2015-02-05  Timo Lilja  <timo.lilja@iki.fi>  (tiny change)

	* mail-source.el (mail-source-call-script): If scripts exit with an
	error, pop up an error buffer.

2015-02-05  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-extra-headers): Add the popular Gmail X-GM-LABELS
	as a default.

	* nnimap.el (nnimap-request-group-scan): Ensure that we've selected the
	correct server.

2015-02-05  Vincent Bernat  <bernat@luffy.cx>  (tiny change)

	* nnimap.el (nnimap-request-group-scan): Fix the function name.

	* gnus-int.el (gnus-request-group-scan): Use the correct function name.
